fix: n+1문제 해결